--- a/classroom1/style.css
+++ b/classroom1/style.css
@@ -2,6 +2,10 @@
   height: 100px;
   width: 100px;
   border: 2px solid black;
+  display: inline-block;
+}
+#content {
+  height: 750px;
 }
 
 * {
@@ -25,4 +29,10 @@ button {
 
 a {
   margin-right: 200px;
+}
+
+footer {
+  background-color: #0f1111;
+  color: white;
+  text-align: center;
 }
