ljfkl;hgklhjg;or

--- a/classroom4/style.css
+++ b/classroom4/style.css
@@ -4,30 +4,31 @@ body {
 
 div {
   height: 100px;
-  width: 150px;
+  width: 50px;
   display: inline-block;
   border: 2px solid black;
 }
 
 #container {
-  width: 600px;
-  height: 600px;
+  width: 800px;
+  height: 300px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   align-items: flex-start;
   /* align-content: flex-start;*/
 }
 
 #box1 {
   background-color: aqua;
+  flex-shrink: 1;
 }
 
 #box2 {
   background-color: pink;
   height: 200px;
-  align-self: flex-end;
+  flex-shrink: 1;
 }
 
 #box3 {
@@ -41,5 +42,4 @@ div {
 
 #box5 {
   background-color: slateblue;
-  align-self: flex-end;
 }
