--- a/classroom9/style.css
+++ b/classroom9/style.css
@@ -1,24 +1,17 @@
-div {
-  height: 100px;
-  width: 100px;
-  background-color: aquamarine;
-  border: 2px solid black;
-  position: absolute;
-  top: 100px;
-  left: 100px;
-  /* transition: all 2s ease-in 1s;
- */
-  /* transform: rotate(360deg); */
-  /* rotate: z 180deg; */
+.loader {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 20px solid #ffe66d;
+  border-top: 20px solid #4ecdc4;
+  animation: spinAnimate 3s steps(5) 0s infinite normal !important;
 }
 
-div:hover {
-  /* background-color: red;
-  color: white;
-  font-size: 20px; */
-  transform: scaleY(1, 2);
-}
-
-div:active {
-  background-color: pink;
+@keyframes spinAnimate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
