--- a/project/style.css
+++ b/project/style.css
@@ -119,7 +119,7 @@ span {
 }
 .panel-ops p {
   display: inline;
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 .panel-ops {
@@ -130,4 +130,29 @@ span {
 .panel-deals {
   font-size: 0.9rem;
   font-weight: 700;
+}
+
+/* hero section */
+.hero-section {
+  background-image: url("hero_image.jpg");
+  background-size: cover;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.hero-msg {
+  background-color: white;
+  color: black;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  margin-bottom: 25px;
+}
+
+.hero-msg a {
+  color: #007185;
 }
