--- a/javascript/aradhana/style.css
+++ b/javascript/aradhana/style.css
@@ -1,4 +1,8 @@
-.heading {
-  color: blue;
-  background-color: yellow;
+.box {
+  height: 100px;
+  width: 100px;
+  border: 1px solid black;
+  margin: 5px;
+  text-align: center;
+  background-color: aquamarine;
 }
