--- a/javascript/aradhana/style.css
+++ b/javascript/aradhana/style.css
@@ -1,8 +1,7 @@
-.box {
+div {
   height: 100px;
   width: 100px;
+  background-color: dodgerblue;
+  color: white;
   border: 1px solid black;
-  margin: 5px;
-  text-align: center;
-  background-color: aquamarine;
 }
